@@ -700,6 +700,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|util
+operator|.
+name|StringUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|yarn
 operator|.
 name|api
@@ -989,6 +1003,22 @@ operator|.
 name|exceptions
 operator|.
 name|ApplicationMasterNotRegisteredException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|exceptions
+operator|.
+name|InvalidLabelResourceRequestException
 import|;
 end_import
 
@@ -4049,6 +4079,76 @@ expr_stmt|;
 return|return
 literal|null
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|InvalidLabelResourceRequestException
+name|e
+parameter_list|)
+block|{
+comment|// If Invalid label exception is received means the requested label doesnt
+comment|// have access so killing job in this case.
+name|String
+name|diagMsg
+init|=
+literal|"Requested node-label-expression is invalid: "
+operator|+
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+decl_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+name|diagMsg
+argument_list|)
+expr_stmt|;
+name|JobId
+name|jobId
+init|=
+name|this
+operator|.
+name|getJob
+argument_list|()
+operator|.
+name|getID
+argument_list|()
+decl_stmt|;
+name|eventHandler
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|JobDiagnosticsUpdateEvent
+argument_list|(
+name|jobId
+argument_list|,
+name|diagMsg
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|eventHandler
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|JobEvent
+argument_list|(
+name|jobId
+argument_list|,
+name|JobEventType
+operator|.
+name|JOB_KILL
+argument_list|)
+argument_list|)
+expr_stmt|;
+throw|throw
+name|e
+throw|;
 block|}
 catch|catch
 parameter_list|(
