@@ -254,6 +254,22 @@ name|yarn
 operator|.
 name|exceptions
 operator|.
+name|InvalidLabelResourceRequestException
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|exceptions
+operator|.
 name|InvalidResourceRequestException
 import|;
 end_import
@@ -1322,7 +1338,7 @@ condition|)
 block|{
 throw|throw
 operator|new
-name|InvalidResourceRequestException
+name|InvalidLabelResourceRequestException
 argument_list|(
 literal|"Invailid resource request, queue="
 operator|+
@@ -1377,7 +1393,7 @@ condition|)
 block|{
 throw|throw
 operator|new
-name|InvalidResourceRequestException
+name|InvalidLabelResourceRequestException
 argument_list|(
 literal|"Invalid resource request"
 operator|+
